Styling adjustments. Reduced lightness of quirk colors to match darker background. Fixed quirk text not wrapping properly.

--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -4,6 +4,6 @@
     --accent-color: #00897b;
     --accent-color-hover: #{scale-color(#00897b, $lightness: -30%)};
 
-    --background-color: #171e27;
+    --background-color: #121212;
     --secondary-border-color: grey;
 }
